compile_error.txt
main.cpp: In function ‘int main()’:
main.cpp:10:13: error: ‘c’ was not declared in this scope
   10 |     cout << c << endl;
      |             ^
